<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Ans"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:gravity="center|end"
            android:textColor="#000000"
            android:textSize="36sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tmp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />


        <TableLayout
            android:id="@+id/btntable"
            android:layout_width="411dp"
            android:layout_height="566dp"
            android:layout_marginTop="77dp">

            <TableRow
                android:id="@+id/table1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/Clear"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/c"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/LeftArr"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LeftArr"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/RightArr"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RightArr"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/Div"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/div"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:id="@+id/table2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_7"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_7"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn_8"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_8"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn_9"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_9"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/Mul"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mul"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:id="@+id/table3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_4"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn_5"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn_6"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_6"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/Sub"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sub"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:id="@+id/table4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn_2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn_3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/Add"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:id="@+id/table5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/Del"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/del"
                    android:textSize="24sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btn_0"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/Dot"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dot"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/Equ"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equ"
                    android:textSize="24sp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>